<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".profile.UserProfileFragment" >


    <RelativeLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageButton
                android:id="@+id/popUpButtonProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:src="@drawable/ic_baseline_more_vert_24"
                android:translationZ="91dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/imageViewProfilePicture"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/profile_pic"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/white_transparent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/name"
                        android:textAlignment="center"
                        android:textColor="@color/tree_green"
                        android:textSize="25sp"
                        android:paddingVertical="3dp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/textViewUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="@string/username"
                        android:textAlignment="center"
                        android:textColor="@color/tree_green"
                        android:textSize="22sp"
                        android:paddingBottom="6dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="5dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture"

        >


        <ImageView
            android:id="@+id/imageViewLeafIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/leaf_icon"
            android:src="@drawable/leaf_green" />

        <TextView
            android:id="@+id/textViewPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/number_of_points"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewTreeIcon"
            android:layout_width="37dp"
            android:layout_height="46dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/tree_icon"
            android:src="@drawable/addtree" />

        <TextView
            android:id="@+id/textViewPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/number_of_posts"
            android:textSize="20sp" />

    </LinearLayout>
    <RelativeLayout
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <GridView
                android:id="@+id/gridViewPosts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:horizontalSpacing="1dp"
                android:numColumns="3"
                android:stretchMode="columnWidth"
                android:verticalSpacing="1dp" >

            </GridView>
    </RelativeLayout>
</LinearLayout>